Blender renders disabled Render Layers using Blender Internal #39763

Closed
opened 2014-04-17 01:02:30 +02:00 by Maverick · 16 comments

System Information
win64 i7 gtx titan

Blender Version
blender-2.70-b179647-win64

Short description of error
Blender renders the Render Layer even though it is disabled.

  • 1.Notice that even so after if finished the rendering the Compositor does not have the data (Mix node only shows the Cycles result).
  • 2.This only happens when the render engine is BI. Blender ignores the render layer if it uses Cycles.

Exact steps for others to reproduce the error
Open attached file, press F12. Blender is rendering the disabled render layer.

Thank you.

render_settings_ignored.png
render_layer_settings_ignored.blend

**System Information** win64 i7 gtx titan **Blender Version** blender-2.70-b179647-win64 **Short description of error** Blender renders the Render Layer even though it is disabled. - 1.Notice that even so after if finished the rendering the Compositor does not have the data (Mix node only shows the Cycles result). - 2.This only happens when the render engine is BI. Blender ignores the render layer if it uses Cycles. **Exact steps for others to reproduce the error** Open attached file, press F12. Blender is rendering the disabled render layer. Thank you. ![render_settings_ignored.png](https://archive.blender.org/developer/F85029/render_settings_ignored.png) [render_layer_settings_ignored.blend](https://archive.blender.org/developer/F85031/render_layer_settings_ignored.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @dragostanasie

Added subscriber: @dragostanasie
Author

This bug is present in 2.7 official as well.

This bug is present in 2.7 official as well.

Added subscriber: @Harvester

Added subscriber: @Harvester

Hello Maverick, I've tried to load your test file into Blender 2.7.0a (Hash f93bc76) 64bit under Win7 Pro 64bit and it doesn't open getting the following error message: "File format is not supported in file C:....\desktop\render_layer_setting_ignored.blend". The console doesn't give any further details on the origin for the error.

Anyway, I tried to recreate your rig in a simple configuration with two scenes, one running BI and the other one Cycles, compositing layers in the Cycles scene and using two layers from the BI and one only from the Cycles scene (the other duplicated layers has been disabled in Cycles). I then activated and deactivated layers in both BI and Cycles scene but couldn't reproduce your problem. Perhaphs I haven't understood it correctly; if you disabled the BI layer then it shouldn't be rendered at all. In fact from your screenshot the only data is coming from the Cycles render.

Please, find attached the test blend file:
render_layers_testfile.blend

Hello Maverick, I've tried to load your test file into Blender 2.7.0a (Hash f93bc76) 64bit under Win7 Pro 64bit and it doesn't open getting the following error message: "File format is not supported in file C:\....\desktop\render_layer_setting_ignored.blend". The console doesn't give any further details on the origin for the error. Anyway, I tried to recreate your rig in a simple configuration with two scenes, one running BI and the other one Cycles, compositing layers in the Cycles scene and using two layers from the BI and one only from the Cycles scene (the other duplicated layers has been disabled in Cycles). I then activated and deactivated layers in both BI and Cycles scene but couldn't reproduce your problem. Perhaphs I haven't understood it correctly; if you disabled the BI layer then it shouldn't be rendered at all. In fact from your screenshot the only data is coming from the Cycles render. Please, find attached the test blend file: [render_layers_testfile.blend](https://archive.blender.org/developer/F85064/render_layers_testfile.blend)
Author

Hi harvester.
Just try using the official 2.7 win64 version. I tried again and it shows the same bug. Let me make a quick resume on how to recreate it though.

Make 2 scenes, one with Cycles and one with BI.Each scene must have just one render layer (the default one).
Disable the render layer of the BI Scene.
Switch to Cycles Scene and Mix the Scenes in the Compositor.

Press F12. Both scenes will render even though BI is disabled.
However after rendering the Compositor will not show the result for the disabled BI render layer (which can be seen in my screenshot as well).

(In my file the BI scene has a Suzanne with SSS, AO with high settings just to be sure you can see it is rendering)

Hi harvester. Just try using the official 2.7 win64 version. I tried again and it shows the same bug. Let me make a quick resume on how to recreate it though. Make 2 scenes, one with Cycles and one with BI.Each scene must have just one render layer (the default one). Disable the render layer of the BI Scene. Switch to Cycles Scene and Mix the Scenes in the Compositor. Press F12. Both scenes will render even though BI is disabled. However after rendering the Compositor will not show the result for the disabled BI render layer (which can be seen in my screenshot as well). (In my file the BI scene has a Suzanne with SSS, AO with high settings just to be sure you can see it is rendering)

Maverick,

The Blender 2.7.0a (Hash f93bc76) 64bit is the current official version. Anyway, I ran a test on the Blender 2.7.0 (Hash: 19e627c) 64bit previous official version following your above instructions and these are the results: BI renders the render layer even if it has been disabled, in fact if I then switch from the Cycles scene in the Compositing view to the BI one I can see the BI scene rendered in the Image editor view, and if you click on the render layer drop down list between the Slot number and the Passes it shows nothing, in the sense that there isn't any Render layer available, which makes sense because we disabled it. Effectively what's strange is that the BI scene was rendered anyway.

Tested also on Blender 2.69.0 r60995 and on Blender 2.62.0 r44136. They all behave the same way as above illustrated. So, despite is might not be a desired behaviour and perhaps it may be addressed by the developers, I wouldn't consider it totally a "bug", but I agree that it doesn't make any sense to disable a layer and get it rendered anyway with consumption of resources and time (I am thinking of very complex scenes not just a plane, a cube and a lamp). Let see the developers' comments.

Maverick, The Blender 2.7.0a (Hash f93bc76) 64bit is the current official version. Anyway, I ran a test on the Blender 2.7.0 (Hash: 19e627c) 64bit previous official version following your above instructions and these are the results: BI renders the render layer even if it has been disabled, in fact if I then switch from the Cycles scene in the Compositing view to the BI one I can see the BI scene rendered in the Image editor view, and if you click on the render layer drop down list between the Slot number and the Passes it shows nothing, in the sense that there isn't any Render layer available, which makes sense because we disabled it. Effectively what's strange is that the BI scene was rendered anyway. Tested also on Blender 2.69.0 r60995 and on Blender 2.62.0 r44136. They all behave the same way as above illustrated. So, despite is might not be a desired behaviour and perhaps it may be addressed by the developers, I wouldn't consider it totally a "bug", but I agree that it doesn't make any sense to disable a layer and get it rendered anyway with consumption of resources and time (I am thinking of very complex scenes not just a plane, a cube and a lamp). Let see the developers' comments.
Author

Thanks harvester,

So indeed you can confirm this bug.

The attached file is a scene as simple as possible which can still replicate the bug.
This is requested by the developers so they can easily check what is wrong.

In practice my file had 6 scenes, heavy geometry and much complex Compositor nodes and it rendered disabled render layers which increased the time considerably.
The only "workaround" was to delete that scene without saving the file...

Thanks harvester, So indeed you can confirm this bug. The attached file is a scene as simple as possible which can still replicate the bug. This is requested by the developers so they can easily check what is wrong. In practice my file had 6 scenes, heavy geometry and much complex Compositor nodes and it rendered disabled render layers which increased the time considerably. The only "workaround" was to delete that scene without saving the file...
Brecht Van Lommel was assigned by Lukas Tönne 2014-04-18 09:51:41 +02:00
Member

Added subscribers: @brecht, @LukasTonne

Added subscribers: @brecht, @LukasTonne
Member

@brecht: i can't get my head around all these render layer flags and BI vs external situation ...

One thing i noticed is that all render layer flags are copied to the Render.layers list - maybe it would be preferable to make this a filtered list to begin with, so that render engines don't ever have to worry about disabled layers?

@brecht: i can't get my head around all these render layer flags and BI vs external situation ... One thing i noticed is that all render layer flags are copied to the `Render.layers` list - maybe it would be preferable to make this a filtered list to begin with, so that render engines don't ever have to worry about disabled layers?
Brecht Van Lommel removed their assignment 2014-04-18 17:26:05 +02:00

It's in ntree_render_scenes that it looks over the compositing nodes to render the needed scenes. It doesn't check if there actually any enabled layers for the scene, or any of the other checks that happen in RE_is_rendering_allowed for the main scene.

Then later on in render_result_new it will add a render result even if no layers are enabled for some special cases.

Copying only the enabled layers is probably fine, but either way a check for this cases needs to be added somewhere.

It's in `ntree_render_scenes` that it looks over the compositing nodes to render the needed scenes. It doesn't check if there actually any enabled layers for the scene, or any of the other checks that happen in `RE_is_rendering_allowed` for the main scene. Then later on in `render_result_new` it will add a render result even if no layers are enabled for some special cases. Copying only the enabled layers is probably fine, but either way a check for this cases needs to be added somewhere.

Thank you Lukas and Brecht for looking into this matter.

Thank you Lukas and Brecht for looking into this matter.
Sergey Sharybin self-assigned this 2014-04-28 10:19:29 +02:00

Will look into this.

Will look into this.

This issue was referenced by 295c37caa4

This issue was referenced by 295c37caa406240993ec42bdf698584527950c16

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 295c37caa4.

Closed by commit 295c37caa4.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39763
No description provided.